--- a/main.css
+++ b/main.css
@@ -4,13 +4,15 @@
 	--light-gray: #9f9f9f;
 	--white: #ffffff;
 }
+* {
+	box-sizing: border-box;
+	&::before,
+	&::after {
+		box-sizing: border-box;
+	}
+}
+
 body {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: 100%;
-	height: 100dvh;
-	width: 100%;
 	background-color: var(--black);
 	margin: 0;
 	padding: 0;
@@ -20,15 +22,15 @@ body {
 }
 
 nav {
-	position: relative;
-	background-color: var(--gray);
+	margin: 50px auto 0;
+	width: fit-content;
 	padding: 5px;
 	border: 3px solid var(--light-gray);
 	border-radius: 50px;
+	anchor-name: --nav;
 }
 
 .link {
-	position: relative;
 	display: inline-block;
 	color: white;
 	text-decoration: none;
@@ -38,22 +40,32 @@ nav {
 	transition: all 0.3s ease;
 	line-height: 1;
 	&.active {
-		anchor-name: --active-nav;
-	}
-	/* &:hover {
 		color: var(--black);
-		background-color: var(--white);
-	} */
+		anchor-name: --active;
+	}
+	&:hover {
+		anchor-name: --nav;
+	}
 }
 
-.bubbles {
+.bubble {
 	position: absolute;
-	position-anchor: --active-nav;
 	top: anchor(top);
 	left: anchor(left);
 	right: anchor(right);
 	bottom: anchor(bottom);
 	border-radius: 50px;
-	background-color: rgba(255, 255, 255, 0.5);
 	transition: all 0.3s ease;
+	z-index: -1;
+	background-color: var(--white);
+
+	&.active {
+		position-anchor: --active;
+	}
+
+	&.hover {
+		background-color: var(--gray);
+		position-anchor: --nav;
+		z-index: -2;
+	}
 }
